<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_rsi_controllers</name>
  <version>0.0.0</version>
  <description>Controllers to interact with robot-specific interfaces of kuka_rsi_driver</description>

  <maintainer email="wilbrandt@fzi.de">Robert Wilbrandt</maintainer>

  <license>BSD-3-Clause</license>

  <author>Robert Wilbrandt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>kuka_rsi_interfaces</depend>
  <depend>lifecycle_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
